# pyqtvumeter

./: .pylintrc  pyproject.toml
.github/workflows/: build.yml
pyqtvumeter/: __main__.py
