[tool.poetry]
name = "pyqtvumeter"
version = "0.0.0"
description = ""
authors = ["Simeon Marijon <simeon.marijon@foss.st.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1"
pyqt5 = "^5"
pyqtgraph ="^0.13"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
pyqtvumeter = "pyqtvumeter.__main__:main"


